more languages and added sponsor

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -33,15 +33,33 @@
     <div class='category'>
       <h1>Translations</h1>
 
+      <h2>Arabic</h2>
+      <ul>
+        <li>dredd</li>
+        <li>mobeen</li>
+      </ul>
+
+      <h2>Bulgarian</h2>
+      <ul>
+        <li>Hyacinth7030</li>
+      </ul>
+
       <h2>Chinese</h2>
       <ul>
         <li>Lin</li>
+        <li>Atticux</li>
+      </ul>
+
+      <h2>Traditional Chinese</h2>
+      <ul>
+        <li>Zoe</li>
       </ul>
 
       <h2>Czech</h2>
       <ul>
         <li>Samantha-dragon</li>
         <li>Dreit</li>
+        <li>suorei</li>
       </ul>
 
       <h2>Danish</h2>
@@ -58,10 +76,17 @@
         <li>Mewww</li>
       </ul>
 
+      <h2>Estonian</h2>
+      <ul>
+        <li>Arachnerd (Mel P.)</li>
+      </ul>
+
       <h2>Finnish</h2>
       <ul>
         <li>Roosa J</li>
         <li>Patajätkä</li>
+        <li>m0arcaffeine</li>
+        <li>Maria</li>
       </ul>
 
       <h2>French</h2>
@@ -71,6 +96,9 @@
         <li>thais</li>
         <li>Jolie-Marie</li>
         <li>Joana</li>
+        <li>Jerome</li>
+        <li>Jo</li>
+        <li>Angelosphere</li>
       </ul>
 
       <h2>German</h2>
@@ -79,11 +107,19 @@
         <li>irukard</li>
         <li>Jamelin</li>
         <li>Powerspank</li>
+        <li>Alina P</li>
+        <li>Daniela Heiß</li>
       </ul>
 
       <h2>Hebrew</h2>
       <ul>
         <li>flypo</li>
+      </ul>
+
+      <h2>Hindi</h2>
+      <ul>
+        <li>Nabarun Roy</li>
+        <li>रोशिकारी</li>
       </ul>
 
       <h2>Hungarian</h2>
@@ -111,6 +147,8 @@
         <li>Raven Draws</li>
         <li>andre</li>
         <li>jparvi</li>
+        <li>InsaneHugster_28</li>
+        <li>Francesca</li>
       </ul>
 
       <h2>Japanese</h2>
@@ -121,6 +159,11 @@
       <h2>Korean</h2>
       <ul>
         <li>prixt</li>
+      </ul>
+
+      <h2>Latvian</h2>
+      <ul>
+        <li>WinnieFranklin</li>
       </ul>
 
       <h2>Macedonian</h2>
@@ -141,6 +184,7 @@
       <h2>Polish</h2>
       <ul>
         <li>Tośka Świetlana</li>
+        <li>Marcin</li>
       </ul>
 
       <h2>Portuguese</h2>
@@ -163,6 +207,12 @@
         <li>Игорь</li>
         <li>OLHA</li>
         <li>dappy</li>
+        <li>Cookie now</li>
+      </ul>
+
+      <h2>Serbian</h2>
+      <ul>
+        <li>Огњен Јовановић</li>
       </ul>
 
       <h2>Spanish</h2>
@@ -184,6 +234,17 @@
         <li>Figauro</li>
       </ul>
 
+      <h2>Tagalog</h2>
+      <ul>
+        <li>Arkintszan</li>
+        <li>krull</li>
+      </ul>
+
+      <h2>Tatar</h2>
+      <ul>
+        <li>dia</li>
+      </ul>
+
       <h2>Thai</h2>
       <ul>
         <li>AquaNoixl</li>
@@ -195,6 +256,7 @@
         <li>mavi</li>
         <li>Yıldırım</li>
         <li>MorDonluSherlock</li>
+        <li>TheNoob</li>
       </ul>
 
       <h2>Ukrainian</h2>
@@ -202,6 +264,7 @@
         <li>Богдан Львов</li>
         <li>Oksana</li>
         <li>Bxel</li>
+        <li>Cookie now - extra thanks for spotting the time bug that was present on multiple translations</li>
       </ul>
 
       <h2>Vietnamese</h2>
