--- a/UI/skd-ref-site/src/app/translation-manager/translation-manager.component.html
+++ b/UI/skd-ref-site/src/app/translation-manager/translation-manager.component.html
@@ -21,7 +21,7 @@
             submit a partial translation, please enter the english value.</li>
           <li>Values contained within <ng-container ngNonBindable>{{}}</ng-container>'s are paramters. You can change
             the text around them, but don't change the text inside.</li>
-          <li>Please leave a comment explaining what you're changing and why. This helps when we receive multiple translations for the same language. Why is yours the version we should use?</li>
+          <li><b>Please leave a comment explaining what you're changing and why.</b> This helps when we receive multiple translations for the same language. Why is yours the version we should use?</li>
         </ul>
       </div>
 
