--- a/UI/skd-ref-site/src/app/welcome/welcome.component.html
+++ b/UI/skd-ref-site/src/app/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <div>
   <h1 [translate]="'Welcome.Hello'">Hello!</h1>
-  <h3 [translate]="'Welcome.Welcome'">Welcome to the SketchDaily reference doohickey.</h3>
+  <h3 [translate]="'Welcome.Welcome'">Welcome to the SketchDaily reference doohickey</h3>
+  <h4>Sponsored by <a href="https://justsketch.me/?ref=sketchdaily">JustSketchMe - 3D pose reference</a></h4>
   <h4><span [translate]="'Welcome.LookingForSomethingElseToDraw'">Looking for something else to draw?</span>&nbsp;<a
       href='https://www.reddit.com/r/sketchdaily/' [translate]="'Welcome.JoinTheFun'">Join the fun!</a></h4>
 </div>
