--- a/UI/skd-ref-site/src/app/home/home.component.html
+++ b/UI/skd-ref-site/src/app/home/home.component.html
@@ -13,8 +13,9 @@
                     </div>
                     <hr/>
                     <div>
-                        This is a new beta version of the site! Here are a few ways you can help:
+                        Enjoy the site? Here are a few ways you can help:
                         <ul>
+                            <li>Submit images. <a routerLink="/submitImages">See here for more details</a></li>
                             <li>Submit translation fixes (or more languages!) <a routerLink="/translate">here</a></li>
                             <li>Submit bugs to <a href='mailto:artomizer@sketchdaily.net'>artomizer@sketchdaily.net</a> (or message <a href='https://www.reddit.com/message/compose/?to=artomizer'>/u/artomizer</a> on Reddit)</li>
                             <li><a href='https://ko-fi.com/artomizer'>Make a small donation</a> so I can <span class='strike'>buy
