added maltese translation

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -171,6 +171,11 @@
         <li>a-bradley</li>
       </ul>
 
+      <h2>Maltese</h2>
+      <ul>
+        <li>M</li>
+      </ul>
+
       <h2>Norwegian</h2>
       <ul>
         <li>pigie</li>
