--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -109,6 +109,7 @@
         <li>Powerspank</li>
         <li>Alina P</li>
         <li>Daniela Heiß</li>
+        <li>Arian S</li>
       </ul>
 
       <h2>Hebrew</h2>
