--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -79,6 +79,7 @@
       <h2>Estonian</h2>
       <ul>
         <li>Arachnerd (Mel P.)</li>
+        <li>Yoko</li>
       </ul>
 
       <h2>Finnish</h2>
