Added shona language

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -222,6 +222,11 @@
         <li>Огњен Јовановић</li>
       </ul>
 
+      <h2>Shona</h2>
+      <ul>
+        <li>Mehboe</li>
+      </ul>
+
       <h2>Spanish</h2>
       <ul>
         <li>@zJorge</li>
