--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -124,6 +124,11 @@
         <li>रोशिकारी</li>
       </ul>
 
+      <h2>Hrvatski</h2>
+      <ul>
+        <li>Nina</li>
+      </ul>
+
       <h2>Hungarian</h2>
       <ul>
         <li>Private Coppery</li>
