--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -183,6 +183,11 @@
         <li>M</li>
       </ul>
 
+      <h2>Mongolian</h2>
+      <ul>
+        <li>namono_</li>
+      </ul>
+
       <h2>Norwegian</h2>
       <ul>
         <li>pigie</li>
