--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -39,6 +39,11 @@
         <li>mobeen</li>
       </ul>
 
+      <h2>Armenian</h2>
+      <ul>
+        <li>Tigran Sargsyan</li>
+      </ul>
+
       <h2>Bulgarian</h2>
       <ul>
         <li>Hyacinth7030</li>
