--- a/UI/skd-ref-site/src/app/header/header.component.html
+++ b/UI/skd-ref-site/src/app/header/header.component.html
@@ -8,6 +8,9 @@
       </select>&nbsp;
       <app-login></app-login>
 
+      <a href="javascript:void(0)" (click)="toggleCssMode()" id="cssModeSwitch"><fa-icon [icon]="cssModeIcon"></fa-icon></a>
+      
+
     </div>
 
   </div>
