--- a/UI/skd-ref-site/src/app/home/home.component.html
+++ b/UI/skd-ref-site/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div id='home'>
         <div class='container'>
             <div class='row'>
-                <div class='col-sm'>
+                <div class='col-sm homeText'>
                     <app-welcome></app-welcome>
                     <app-news></app-news>
 
