--- a/UI/skd-ref-site/src/app/header/header.component.css
+++ b/UI/skd-ref-site/src/app/header/header.component.css
@@ -3,23 +3,28 @@
 }
 
 .navbar-inverse {
-    background-color: #1b1b1b;
-    background-color: #1b1b1b;
-    background-image: -moz-linear-gradient(top,#222,#111);
-    background-image: -webkit-gradient(linear,0 0,0 100%,from(#222),to(#111));
-    background-image: -webkit-linear-gradient(top,#222,#111);
-    background-image: -o-linear-gradient(top,#222,#111);
-    background-image: linear-gradient(to bottom,#222,#111);
+    background-color: var(--navbar-background-color);
+    background-color: var(--navbar-background-color);
+    background-image: -moz-linear-gradient(top,var(--navbar-background-color-start),var(--navbar-background-color-end));
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(var(--navbar-background-color-start)),to(var(--navbar-background-color-end)));
+    background-image: -webkit-linear-gradient(top,var(--navbar-background-color-start),var(--navbar-background-color-end));
+    background-image: -o-linear-gradient(top,var(--navbar-background-color-start),var(--navbar-background-color-end));
+    background-image: linear-gradient(to bottom,var(--navbar-background-color-start),var(--navbar-background-color-end));
     background-repeat: repeat-x;
-    border-color: #252525;
+    border-color: var(--navbar-border-color);
     border-width: 1px;
     border-style: solid;
     height: 41px;
 }
 
 select {
-    background-color: black;
+    background-color: var(--main-background-color);
     color: grey;
     
     border: none;
+}
+
+#cssModeSwitch {
+    padding-left: 10px;
+    padding-right: 5px;
 }
