--- a/UI/skd-ref-site/src/app/image-thumbnail/image-thumbnail.component.css
+++ b/UI/skd-ref-site/src/app/image-thumbnail/image-thumbnail.component.css
@@ -6,7 +6,7 @@
 .selected {
     border-color: darkblue;
     background-color: lightskyblue;
-    color: black;
+    color: var(--main-background-color);
     opacity: 1;
 }
 
@@ -29,6 +29,6 @@
     border-width: 1px;
     border-color: lightgray;
 
-    color: darkslategrey;
+    color: var(--darker-text-color);
     opacity: 0.9;
 }
