--- a/UI/skd-ref-site/src/styles.css
+++ b/UI/skd-ref-site/src/styles.css
@@ -9,27 +9,27 @@ div.debug {
 }
 
 body {
-    background-color: black;
-    color: slategrey;
+    background-color: var(--main-background-color);
+    color: var(--main-text-color);
     height: 100%;
     margin: 0;
 }
 
 .navbar a, .navbar a:visited {
     text-decoration: none;
-    color: slategrey;
+    color: var(--main-text-color);
 }
 
 .navbar a:hover {
-    color: white;
+    color: var(--light-text-color);
 }
 
 a {
-    color: #08c;
+    color: var(--link-color);
 }
 
 a:hover, a:focus {
-    color: #005580;
+    color: var(--link-hover-color);
     text-decoration: underline;
 }
 
@@ -42,15 +42,15 @@ a:hover, a:focus {
 }
 
 .navbar-inverse {
-    background-color: #1b1b1b;
-    background-color: #1b1b1b;
-    background-image: -moz-linear-gradient(top,#222,#111);
-    background-image: -webkit-gradient(linear,0 0,0 100%,from(#222),to(#111));
-    background-image: -webkit-linear-gradient(top,#222,#111);
-    background-image: -o-linear-gradient(top,#222,#111);
-    background-image: linear-gradient(to bottom,#222,#111);
+    background-color: var(--navbar-background-color);
+    background-color: var(--navbar-background-color);
+    background-image: -moz-linear-gradient(top, var(--navbar-background-color-start),var(--navbar-background-color-end));
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(var(--navbar-background-color-start)),to(var(--navbar-background-color-end)));
+    background-image: -webkit-linear-gradient(top,var(--navbar-background-color-start),var(--navbar-background-color-end));
+    background-image: -o-linear-gradient(top,var(--navbar-background-color-start),var(--navbar-background-color-end));
+    background-image: linear-gradient(to bottom,var(--navbar-background-color-start),var(--navbar-background-color-end));
     background-repeat: repeat-x;
-    border-color: #252525;
+    border-color: var(--navbar-border-color);
     border-width: 1px;
     border-style: solid;
     height: 41px;
@@ -59,7 +59,7 @@ a:hover, a:focus {
 .well {
     padding: 19px;
     margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
+    background-color: var(--filter-background-color);
+    border: 1px solid var(--filter-border-color);
     border-radius: 4px;
 }
