fixing background color

--- a/UI/skd-ref-site/src/assets/style-dark.css
+++ b/UI/skd-ref-site/src/assets/style-dark.css
@@ -1,7 +1,7 @@
 :root {
     --main-text-color: slategrey;
     --darker-text-color: darkslategrey;
-    --main-background-color: blackwheat;
+    --main-background-color: black;
     --light-text-color: white;
     --link-color: #08c;
     --link-hover-color: #005580;
