--- a/UI/skd-ref-site/src/app/header/header.component.css
+++ b/UI/skd-ref-site/src/app/header/header.component.css
@@ -15,6 +15,8 @@
     border-width: 1px;
     border-style: solid;
     height: 41px;
+    padding: 0;
+    margin: 0;
 }
 
 select {
@@ -28,3 +30,4 @@ select {
     padding-left: 10px;
     padding-right: 5px;
 }
+
