styling the announcement

--- a/UI/skd-ref-site/src/app/news/news.component.css
+++ b/UI/skd-ref-site/src/app/news/news.component.css
@@ -29,3 +29,14 @@ h1 {
 .pageControls a {
     padding-right: 10px;
 }
+
+#announcement {
+    background-color: var(--announcement-background-color);
+    border-radius: 6px;
+    padding: 5px;
+    color: var(--announcement-text-color);
+}
+
+.header fa-icon {
+    padding-right: 6px;
+}
