styling announcement link

--- a/UI/skd-ref-site/src/app/news/news.component.css
+++ b/UI/skd-ref-site/src/app/news/news.component.css
@@ -37,6 +37,10 @@ h1 {
     color: var(--announcement-text-color);
 }
 
+::ng-deep .announcement a {
+    color: var(--darker-text-color);
+}
+
 .header fa-icon {
     padding-right: 6px;
 }
