--- a/UI/skd-ref-site/src/app/news/news.component.html
+++ b/UI/skd-ref-site/src/app/news/news.component.html
@@ -6,7 +6,7 @@
             <fa-icon icon="exclamation-circle"></fa-icon>
             <b>{{'News.Announcement' | translate}}: </b>
         </div>
-        <span [innerHTML]="announcement"></span>
+        <span [innerHTML]="announcement" class="announcement"></span>
     </div>
 </div>
 
